--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,27 +16,26 @@ version: 0.2
   #git-credential-helper: yes
 
 phases:
-  #install:
+  install:
     #If you use the Ubuntu standard image 2.0 or later, you must specify runtime-versions.
     #If you specify runtime-versions and use an image other than Ubuntu standard image 2.0, the build fails.
-    #runtime-versions:
-      # name: version
-      # name: version
+    runtime-versions:
+      nodejs: 12.x
     #commands:
       # - command
       # - command
-  #pre_build:
-    #commands:
-      # - command
-      # - command
+  pre_build:
+    commands:
+      - echo Project Setup
+      - npm install
   build:
     commands:
-      # - command
-      # - command
+      - echo Compile and minify for production
+      - npm run build
   #post_build:
     #commands:
-      # - command
-      # - command
+      #- echo Compiles and hot-reloads for development
+      #- npm run serve
 #reports:
   #report-name-or-arn:
     #files:
