Move source, update specs
This commit restructures the directory to match the defaults for aws
codecommit and codedeploy.

--- a/appspec.yml
+++ b/appspec.yml
@@ -1,6 +1,8 @@
 version: 0.0
 os: linux
 files:
+  - source: source
+    destination: /webapps/mystic-vale
 hooks:
   BeforeInstall:
   AfterInstall:
